# zzrpc

./: Cargo.toml  README.md
.github/: FUNDING.yml
zzrcp/: Cargo.toml
zzrcp-derive/: Cargo.toml
zzrcp/src/: lib.rs  producer.rs
zzrcp/src/consumer/: stream.rs  value.rs
zzrpc/: Cargo.toml  README.md
zzrpc-derive/: Cargo.toml  README.md
zzrpc-derive/src/: lib.rs  tests.rs
zzrpc/examples/simple/: README.md  api.rs  client.rs  main.rs  producer.rs  server.rs
zzrpc/src/: lib.rs  producer.rs
zzrpc/src/consumer/: mod.rs  stream.rs  value.rs
