[package]
name = "zzrpc-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
convert_case = "0.6.0"

[dev-dependencies]
syn = { version = "1.0.107", features = ["full", "visit", "extra-traits"] }
prettyplease = "0.1.22"
