[package]
name = "zzrpc-derive"
version = "0.1.1"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Macros for zzrpc."
license = "Apache-2.0"
repository = "https://github.com/zduny/zzrpc"
documentation = "https://docs.rs/zzrpc/"
keywords = ["rpc", "mezzenger", "communication", "api"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
convert_case = "0.6.0"
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
syn = { version = "1.0.107", features = ["full", "visit", "extra-traits"] }
prettyplease = "0.1.22"
