[package]
name = "zzrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
mezzenger = "0.1.2"
futures = "0.3.25"
pin-project = "1.0.12"
zzrpc-derive = { path = "../zzrpc-derive" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.23.0", features = ["rt", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zduny-wasm-timer = "0.2.7"
js-utils = { version = "0.1.3", default-features = false, features = ["spawn", "sleep"] }
