[package]
name = "zzrpc"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "RPC over mezzenger transports."
license = "Apache-2.0"
repository = "https://github.com/zduny/zzrpc"
documentation = "https://docs.rs/zzrpc/"
keywords = ["rpc", "mezzenger", "communication", "api"]

[dependencies]
serde = { version = "1.0.150", features = ["derive"] }
mezzenger = "0.1.2"
futures = "0.3.25"
pin-project = "1.0.12"
zzrpc-derive = "0.1.0"
atomic-counter = "1.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.23.0", features = ["rt", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zduny-wasm-timer = "0.2.7"
js-utils = { version = "0.1.3", default-features = false, features = ["spawn", "sleep"] }
