[package]
name = "zzrpc"
version = "0.1.2"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "RPC over mezzenger transports."
license = "Apache-2.0"
repository = "https://github.com/zduny/zzrpc"
documentation = "https://docs.rs/zzrpc/"
keywords = ["rpc", "mezzenger", "communication", "api"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
mezzenger = "0.1.4"
futures = "0.3.28"
pin-project = "1.1.3"
zzrpc-derive = "0.1.2"
atomic-counter = "1.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.32.0", features = ["rt", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zduny-wasm-timer = "0.2.8"
js-utils = { version = "0.1.4", default-features = false, features = ["spawn", "sleep"] }

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
kodec = { version = "0.1.0", features = ["binary"] }
mezzenger-tcp = "0.1.3"
chrono = { version = "0.4.31", features = ["serde"] }